--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ecl_sigslots_lite
-	previous = 
-	base = 0cd76f393c70
+	previous = 0cd76f393c70
+	base = bfecc46b2b1d
 	trim = 
 	trimbase = 
