--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ecl_io
-	previous = 
-	base = a0ef2d84c174
+	previous = a0ef2d84c174
+	base = 78da81955cf1
 	trim = 
 	trimbase = 
