--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ecl_time_lite
-	previous = 
-	base = a0e083e9d419
+	previous = a0e083e9d419
+	base = 6d038a12ad9a
 	trim = 
 	trimbase = 
