--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ecl_lite
-	previous = 
-	base = 9baad5f0e615
+	previous = 9baad5f0e615
+	base = 1ad195a5a9c0
 	trim = 
 	trimbase = 
