--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ecl_converters_lite
-	previous = 
-	base = afe4f9618e5a
+	previous = afe4f9618e5a
+	base = 42a5bc315bd5
 	trim = 
 	trimbase = 
