--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ecl_errors
-	previous = 
-	base = e80eae741c18
+	previous = e80eae741c18
+	base = 891204800431
 	trim = 
 	trimbase = 
