--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ecl_config
-	previous = 
-	base = 3f4df559d1b7
+	previous = 3f4df559d1b7
+	base = 40f6255a3890
 	trim = 
 	trimbase = 
