--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ecl_console
-	previous = 
-	base = dd05d3debe6c
+	previous = dd05d3debe6c
+	base = 6d06042f6a6e
 	trim = 
 	trimbase = 
